tests/src/frontend/typechecking/invalid/mutable_lambda_8.sk
fun foo(f: Int ~> Int): Int {
  f(42)
}

fun bar(bad: (Int, Int) -> Int): Int {
  foo(x ~> bad(x, x))
}
